--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
+  go:
+    image: mcr.microsoft.com/devcontainers/go:2-1.25-trixie
   rustfs:
     image: rustfs/rustfs:latest
+
     ports:
       - "9000:9000"
       - "9001:9001"
