--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,6 @@
+# Copyright (c) HashiCorp, Inc.
+# SPDX-License-Identifier: MPL-2.0
+
 services:
   go:
     image: mcr.microsoft.com/devcontainers/go:2-1.25-trixie
